fix color contrasts

--- a/ckanext/nhs/fanstatic/sass/theme/_dataset.scss
+++ b/ckanext/nhs/fanstatic/sass/theme/_dataset.scss
@@ -143,9 +143,9 @@
         
         li {
             a {
-                background-color: #d8dde0;
+                background-color: #e8ecef;
                 font-size:16px;
-                color:#232323 !important;
+                color:#040404 !important;
                 border-radius: 0;
                 padding: 6px 14px;
                 margin-right:5px;
@@ -154,7 +154,7 @@
             }
 
             a:hover {
-                background-color:#d8d8d8;
+                background-color:#f5ebeb;
             }
         }
     }
@@ -215,6 +215,10 @@ a.btn {
             margin-left:24px;
             margin-right:24px;
         }
+    }
+
+    .secondary:empty {
+        border-bottom:0;
     }
 }
 
