--- a/ckanext/nhs/fanstatic/sass/theme/_general.scss
+++ b/ckanext/nhs/fanstatic/sass/theme/_general.scss
@@ -326,3 +326,11 @@ a:visited {
     top:0;
     color: #212b32;
 }
+
+.account-masthead .account ul li a {
+	color:#fff;
+}
+
+.account-masthead .account ul li a:focus {
+	color:#000;
+}
